# weasy-palette

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: render-examples.yml
examples/: article-dark.html  article-light.html  clinical-brief.md  cv-context.json  github-trending-magazine-data.json  github-trending-magazine-print.html  github-trending-magazine.html  impeccable-design-notes.md  letter-context.json  report-context.json  template-render-demo.md
scripts/: generate_github_trending_magazine.py
src/weasyprint_flexoki/: __init__.py  cli.py  flexoki.css  render.py
src/weasyprint_flexoki/templates/: cv.html.j2  github-trending-magazine-print.html.j2  github-trending-magazine-screen.html.j2  letter.html.j2  report.html.j2
